# ChatPDF

./: README.md  app.py  main.py  pyproject.toml
templates/: index.html
