[project]
name = "chatpdf"
version = "0.1.0"
description = "RAG based chatpdf"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "flask-cors>=6.0.5",
    "huggingface-hub>=1.20.1",
    "langchain>=1.3.11",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "torch>=2.12.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
